рефакторинг: полный переход всех доменов на архитектуру фильтров PredicateBuilder v2